# skToyRenderer

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindSDL2.cmake  copyFiles.cmake  findVulkan.cmake
demo/: CMakeLists.txt  main.cpp
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
src/: pch.hpp  sktr.cpp  sktr.hpp
src/core/: constant.hpp  context.cpp  context.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/sktr/: pch.hpp  sktr.cpp  sktr.hpp
src/sktr/core/: constant.hpp  context.cpp  context.hpp  material.cpp  material.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp
src/sktr/system/: buffer.cpp  buffer.hpp  command_manager.cpp  command_manager.hpp  descriptor_manager.cpp  descriptor_manager.hpp  render_process.cpp  render_process.hpp  sampler.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
src/sktr/utils/: common.hpp  math.hpp  sdl_check.hpp  sdl_delete.hpp  tools.cpp  tools.hpp
src/system/: buffer.cpp  buffer.hpp  command_manager.cpp  command_manager.hpp  descriptor_manager.cpp  descriptor_manager.hpp  render_process.cpp  render_process.hpp  sampler.hpp  shader.cpp  shader.hpp  swapchain.cpp  swapchain.hpp
src/utils/: common.hpp  math.hpp  sdl_check.hpp  sdl_delete.hpp  tools.cpp  tools.hpp
